change: agregado objeto status
