# api/api.yaml
@@ -18,7 +18,6 @@ paths:
           "*/*":
             schema:
               $ref: "#/components/schemas/SignUpRequest"
-
       responses:
         "200":
           description: Response de success del sign up.
@@ -27,8 +26,10 @@ paths:
               schema:
                 $ref: "#/components/schemas/SignUpResponse"
               example:
-                code: "CODE-000"
-                messge: "Success."
+                status:
+                  code: "CODE-00"
+                  messge: "Success."
+                
         "400":
           description: Bad request
           content:
@@ -36,8 +37,9 @@ paths:
               schema:
                 $ref: '#/components/schemas/SignUpResponse'
               example:
-                Code: "CODE-001"
-                Message: "Bad request"
+                status:
+                  code: "CODE-01"
+                  Message: "Bad request"
         "500":
           description: Internal Error
           content:
@@ -45,22 +47,28 @@ paths:
               schema:
                 $ref: '#/components/schemas/SignUpResponse'
               example:
-                code: "CODE-002"
-                messge: "Internal Error"
-
+                status:
+                  code: "CODE-02"
+                  messge: "Internal Error"
 components:
   schemas:
     SignUpRequest:
       description: Objeto que contiene el request del servicio validate password.
       type: object
       properties:
-        ID:
+        id:
           type: string
           description: Uuid unico del cliente.
       required:
-        - ID
+        - id
     SignUpResponse:
       description: Response object of the signup
+      type: object
+      properties:
+        status: 
+          $ref: '#/components/schemas/StatusResponse'
+    StatusResponse:
+      description: Generic status response.
       type: object
       properties:
         Code:
